# novel-app

./: Cargo.toml
frontend/src/: App1.vue
frontend/src/components/: ButtonText.vue  TextEditor.vue
src/: apiconfig.rs  main.rs  opi.rs  test.rs
