[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="^0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
actix-web = {version="^4"}
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
env_logger = "0.10.1"
